added serious things

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -15,6 +15,15 @@
   cursor: pointer;
 }
 
+.importantInfo {
+  width: 200px;
+  margin: auto;
+}
+
+.gimmeShadow {
+  box-shadow: 17px 18px 21px 12px rgba(50, 50, 50, 0.96);
+}
+
 #consoleWrapper {
   min-width: 600px;
   height: 500px;
