--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -17,6 +17,12 @@
     cursor: pointer;
 }
 
+.preWrapped {
+    white-space: pre-wrap;
+    height: 400px;
+    overflow-y: scroll;
+}
+
 .importantInfo {
     width: 200px;
 
